Kubernetes/yml-templates/network-policy/network-policy-multi-ns.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: egress-namespaces

spec:

  podSelector:
    matchLabels:
      app: myapp

  policyTypes:
  - Egress

  egress:
  - to:
    - namespaceSelector:
        matchExpressions:
        - key: namespace
          operator: In
          values: ["frontend", "backend"]

# kubectl label namespace frontend namespace=frontend
# kubectl label namespace backend namespace=backend
